[project]
name = "ya-business-api"
version = "4.0.0"
description = "Yandex business API client"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Kirill_Lekhov", email = "kirill.lekhov@mail.ru" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
sync = [
    "requests>=2.32.5",
]
all = [
    "aiohttp>=3.10.11 ; python_full_version < '3.13'",
    "aiohttp>=3.13.3 ; python_full_version >= '3.13'",
    "requests>=2.32.5",
]
async = [
    "aiohttp>=3.10.11 ; python_full_version < '3.13'",
    "aiohttp>=3.13.3 ; python_full_version >= '3.13'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.10.11",
    "flake8>=7.1.2",
    "flake8-zale>=0.2.1",
    "pip-audit-extra>=0.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "requests>=2.32.4",
]
